--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
     min-height: 400px;
 }
 
+.btn-sm{
+    margin: 0px auto;
+    padding: 10px 50px 10px 50px;
+    color: #0F0F0F;
+    font-weight: 650;
+}
+
 .footer{
     background-color: #D1C4E9;
     margin: 0px auto;
